Adjusting UI for Login/Menu/Court Forms

--- a/Court System/Properties/Resources.resx
+++ b/Court System/Properties/Resources.resx
@@ -118,13 +118,34 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="photo-1568092806323-8ec13dfa9b92" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\photo-1568092806323-8ec13dfa9b92.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="choosePicTwo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\choosePicTwo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LoginIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LoginIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="4144272" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4144272.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="choosePicThree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\choosePicThree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="download" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\download.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="photo-1568092806323-8ec13dfa9b92" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\photo-1568092806323-8ec13dfa9b92.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="choosePicOne" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\choosePicOne.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="21472161321582518278-512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\21472161321582518278-512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="arrowBackOne" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\arrowBackOne.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="arrowBackTwo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\arrowBackTwo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
